# nu_plugin_calc

./: .clang-format  CMakeLists.txt  README.md  calulations.txt
src/: nu_plugin_calc.cpp
